--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "longman/telegram-bot": "^0.64.0"
+        "longman/telegram-bot": "^0.64.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
