--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-
+TELEGRAM_BOT_API_URL=
 TELEGRAM_BOT_API_KEY=
 TELEGRAM_BOT_USERNAME=
 TELEGRAM_DB_PREFIX=
