update timezone to UTC+8 add saved photo migration/model/factory/seeder

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
             "Tests\\": "tests/"
         },
         "files": [
-            "app/Helpers/ExceptionParser.php"
+            "app/Helpers/ExceptionParser.php",
+            "app/Helpers/Common.php"
         ]
     },
     "minimum-stability": "dev",
