--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
+        "ext-redis": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "longman/telegram-bot": "^0.64.0",
-        "ext-json": "*",
-        "ext-redis": "*"
+        "marcin-orlowski/laravel-api-response-builder": "^9.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
