--- a/ux/.env.development
+++ b/ux/.env.development
@@ -5,7 +5,7 @@ VUE_APP_ENV = 'development'
 VUE_APP_BASE_API = 'http://telegram-gallery.tw/index.php'
 
 # base doman name
-VUE_APP_BASE_DOMAIN = 'http://telegram-gallery.tw'
+VUE_APP_BASE_DOMAIN = 'http://telegram-gallery.tw/'
 
 
 # VUE_APP_BASE_API = '/dev-api'
