Enhance security Make redis allow use redis uri to connect

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#有設的話，會取代其他的Redis的設定值
+REDIS_URL=
+
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
@@ -51,3 +54,6 @@ TELEGRAM_BOT_API_URL=
 TELEGRAM_BOT_API_KEY=
 TELEGRAM_BOT_USERNAME=
 TELEGRAM_DB_PREFIX=
+TELEGRAM_ADMIN_USER_ID=
+TELEGRAM_API_SECRET=
+
