--- a/ux/.env.production
+++ b/ux/.env.production
@@ -4,7 +4,7 @@ ENV = 'production'
 VUE_APP_ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'index.php'
+VUE_APP_BASE_API = 'api/'
 
 # base doman name
 VUE_APP_BASE_DOMAIN = '
