--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_NAME=Telegram-gallery
+#local/production
+APP_ENV=${APP_ENV}
+APP_KEY=${APP_KEY}
+APP_DEBUG=${APP_DEBUG}
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST="${DB_HOST}"
+DB_DATABASE="${DB_DATABASE}"
+DB_USERNAME="${DB_USERNAME}"
+DB_PASSWORD="${DB_PASSWORD}"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,9 +21,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_HOST=${REDIS_HOST}
+REDIS_PASSWORD=${REDIS_PASSWORD}
+REDIS_PORT=${REDIS_PORT}
 
 #有設的話，會取代其他的Redis的設定值
 REDIS_URL=
@@ -36,11 +37,11 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_S3_PUBLIC_URL=
+AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"
+AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
+AWS_BUCKET="${AWS_BUCKET}"
+AWS_S3_PUBLIC_URL="${AWS_S3_PUBLIC_URL}"
+AWS_DEFAULT_REGION="${AWS_DEFAULT_REGION}"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -51,10 +52,10 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-TELEGRAM_BOT_API_URL=
-TELEGRAM_BOT_API_KEY=
-TELEGRAM_BOT_USERNAME=
-TELEGRAM_DB_PREFIX=
-TELEGRAM_ADMIN_USER_ID=
-TELEGRAM_API_SECRET=
+TELEGRAM_BOT_API_URL="${TELEGRAM_BOT_API_URL}"
+TELEGRAM_BOT_API_KEY="${TELEGRAM_BOT_API_KEY}"
+TELEGRAM_BOT_USERNAME="${TELEGRAM_BOT_USERNAME}"
+TELEGRAM_DB_PREFIX="${TELEGRAM_DB_PREFIX}"
+TELEGRAM_ADMIN_USER_ID="${TELEGRAM_ADMIN_USER_ID}"
+TELEGRAM_API_SECRET="${TELEGRAM_API_SECRET}"
 
