--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     branches:
       only:
-        - master
+        - feature/05-circleci
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.4-node-browsers
